--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:4b3jF5keFrE8U1QL1gHi7XnPeq9KeCbpUowMepQwYeY=
 APP_DEBUG=true
-APP_URL=http://localhost
-
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
